package ar.edu.utn.frba.dds.material;

/**
 * This is a Javadoc.com
 */
public enum TipoMaterial {
  POLIESTER,
  ALGODON,
  JEAN,
  CUERO

}
