package ar.edu.utn.frba.dds.material;

/**
 * This is a Javadoc.com
 */
public enum Trama {
  LISA,
  RAYADA,
  LUNARES,
  A_CUADROS,
  ESTAMPADO
}
