package ar.edu.utn.frba.dds.motor;

public class MotorDeSugerenciasBasico extends MotorDeSugerencias {




}
