package ar.edu.utn.frba.dds.prenda;

/**
 * This is a Javadoc.com
 */
public enum Categoria {
  PARTE_SUPERIOR,
  PARTE_INFERIOR,
  CALZADO,
  ACCESORIO
}
