package ar.edu.utn.frba.dds.prenda;

public enum Formalidad {

  FORMAL,
  INFORMAL,
  NEUTRA

}
